--- a/haskell-3d-stl.cabal
+++ b/haskell-3d-stl.cabal
@@ -17,10 +17,12 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Data.Format.Stl
+                       Data.TriangleList
   other-modules:       Data.Format.Stl.TextParser
                        Data.Format.Stl.BinaryParser
   build-depends:       base == 4.*,
-                       attoparsec == 0.10.*
+                       attoparsec == 0.10.*,
+                       text == 0.11.*
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -28,6 +30,8 @@ executable stl-info
   main-is:             stl-info-main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base == 4.*,
+                       attoparsec == 0.10.*,
+                       text == 0.11.*
   hs-source-dirs:      src
   default-language:    Haskell2010
