--- a/haskell-3d-stl/haskell-3d-stl.cabal
+++ b/haskell-3d-stl/haskell-3d-stl.cabal
@@ -12,7 +12,7 @@ maintainer:          inorindesu@gmail.com
 -- copyright:           
 category:            Data
 build-type:          Simple
-extra-source-files:  README.adoc
+--extra-source-files:
 cabal-version:       >=1.10
 
 library
@@ -22,6 +22,7 @@ library
                        Data.Format.Stl.BinaryParser
   build-depends:       base == 4.*,
                        attoparsec == 0.10.*,
-                       text == 0.11.*
+                       text == 0.11.*,
+                       vector == 0.10.*
   hs-source-dirs:      src
   default-language:    Haskell2010
