--- a/haskell-3d-stl/haskell-3d-stl.cabal
+++ b/haskell-3d-stl/haskell-3d-stl.cabal
@@ -26,3 +26,16 @@ library
                        vector == 0.10.*
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+executable stl-parse-test
+  main-is:             stl-parse-test.hs
+  other-modules:       Data.Format.Stl.TextParser
+                       Data.TriangleList
+                       Data.Format.Stl
+  build-depends:       base == 4.*,
+                       attoparsec == 0.10.*,
+                       text == 0.11.*,
+                       vector == 0.10.*,
+                       QuickCheck == 2.6.*
+  hs-source-dirs:      src
+  default-language:    Haskell2010
